# OOP

./: CMakeLists.txt  README.md  explain.md  files.cmake
HW0/: README.md
HW1/test/: ut_order.cpp
HW2/: files.cmake
HW2/docs/: sort.cpp
HW2/include/: Snack.hpp
HW2/src/: Snack.cpp  StorageManager.cpp
HW2/test/: ut_snack.cpp  ut_storage.cpp
HW3/: files.cmake
HW3/include/: CargoPaper.hpp  ElectricalTrain.hpp  MaglevTrain.hpp  Ticket.hpp  Train.hpp
HW3/src/: CargoPaper.cpp  CargoTrain.cpp  ElectricalTrain.cpp  MaglevTrain.cpp  Ticket.cpp  Train.cpp
HW4/: CMakeLists.txt  README.md  files.cmake
HW4/include/: bonus.hpp  cylinder_engineer.hpp  extern_sales.hpp  project_assistant.hpp  staff.hpp  staff_level.hpp  staff_no.hpp  vendor.hpp
HW4/src/: cylinder_engineer.cpp  infrastructure_engineer.cpp  it_support_engineer.cpp  project_assistant.cpp  staff_sales.cpp  vendor.cpp
HW4/test/: ut_extern_sales.cpp  ut_infrastructure_engineer.cpp  ut_it_support_engineer.cpp  ut_person.cpp
HW5/: CMakeLists.txt  README.md
HW5/include/Ore/: BreakExp.hpp  CoalOre.hpp  DiamondOre.hpp  GoldOre.hpp  IronOre.hpp  Ore.hpp
HW5/include/Pickaxe/: DiamondPickaxe.hpp  Durability.hpp  IronPickaxe.hpp  WoodenPickaxe.hpp
HW5/src/: Furnace.cpp
HW5/src/Ore/: CoalOre.cpp  DiamondOre.cpp  GoldOre.cpp  IronOre.cpp  SmeltableOre.cpp
HW5/src/Pickaxe/: DiamonPickaxe.cpp  GoldPickaxe.cpp
HW5/test/: ut_furnace.cpp
HW5/test/Ore/: ut_gold_ore.cpp  ut_ore.cpp
HW5/test/Pickaxe/: ut_diamond_pickaxe.cpp  ut_pickaxe.cpp  ut_stone_pickaxe.cpp
HW6/: CMakeLists.txt
HW6/include/: CopperOre.hpp  DiamondOre.hpp  Enchantment.hpp  Furnace.hpp  IConsumable.hpp  IronOre.hpp  Stick.hpp
HW6/scripts/: test.cpp
HW6/src/: CopperOre.cpp  EnchantingTable.cpp  GoldOre.cpp  Ingot.cpp  LapisLazuli.cpp  Stick.cpp
HW6/test/: CopperOre_test.cpp  CraftingTable_test.cpp  EnchantingTable_Test.cpp  Furnace_test.cpp  GoldOre_test.cpp  IronOre_test.cpp  Pickaxe_test.cpp
HW7/: CMakeLists.txt  README.md
HW7/include/: Company.hpp
HW7/include/Device/: Dehumidifier.hpp  Device.hpp  Fan.hpp  Loudspeaker.hpp
HW7/include/PowerSwitch/: NormalPowerSwitch.hpp  PowerSwitch.hpp  PowerSwitchState.hpp
HW7/src/: Company.cpp
HW7/src/Device/: AirConditioner.cpp  Dehumidifier.cpp  Fan.cpp  Light.cpp  Loudspeaker.cpp
HW7/src/PowerSwitch/: MainPowerSwitch.cpp  NormalPowerSwitch.cpp
HW7/test/: test_utils.hpp
HW7/test/Device/: ut_air_conditioner.cpp  ut_dehumidifier.cpp  ut_fan.cpp
HW7/test/PowerSwitch/: ut_main_power_switch.cpp
LAB01/: README.md
LAB01/include/: Burger.hpp  Ingredient.hpp  RandomFood.hpp  Salad.hpp  ToString.hpp
LAB01/src/: Food.cpp  Noodle.cpp
LAB01/test/: main.cpp
LAB02/: README.md  build_log.txt  build_log_2.txt  files.cmake
LAB02/include/: Dessert.hpp  Drink.hpp  ICookable.hpp  IPreparable.hpp  SideDish.hpp  ToString.hpp  Validator.hpp
LAB02/src/: Burger.cpp  Manager.cpp  Validator.cpp
ME/: .gitignore  files.cmake
ME/include/: furniture.hpp  item_type.hpp  normal_product.hpp  product.hpp  snack.hpp  warrenty_product.hpp
ME/src/: normal_product.cpp  product.cpp  snack.cpp  warrenty_product.cpp
ME/test/: ut_furniture.cpp  ut_product.cpp  ut_vehicle.cpp  ut_warrenty_product.cpp
docs/: vector.cpp
include/: Armor.hpp  Building.hpp  Burger.hpp  CargoPaper.hpp  CargoTrain.hpp  CraftingTable.hpp  Dessert.hpp  Diamond.hpp  Drink.hpp  EnchantingTable.hpp  Food.hpp  FoodType.hpp  Furnace.hpp  GoldOre.hpp  ICustomizable.hpp  IEnchantable.hpp  IFood.hpp  ISmeltable.hpp  Ingot.hpp  Ingredient.hpp  LapisLazuli.hpp  LapisLazuliOre.hpp  Manager.hpp  Material.hpp  Noodle.hpp  Option.hpp  Order.hpp  Pickaxe.hpp  Soup.hpp  Storage.hpp  StorageManager.hpp  Ticket.hpp  Train.hpp  alcohol.hpp  cost_ratio.hpp  coupon.hpp  deli.hpp  food_product.hpp  infrastructure_engineer.hpp  it_support_engineer.hpp  (+8 more)
include/Device/: AirConditioner.hpp  DeviceType.hpp  Light.hpp
include/Ore/: DurabilityCost.hpp  ObsidianOre.hpp  Product.hpp  SmeltExp.hpp  SmeltableOre.hpp
include/Pickaxe/: GoldPickaxe.hpp  Pickaxe.hpp  PickaxeType.hpp  StonePickaxe.hpp
include/PowerSwitch/: MainPowerSwitch.hpp
src/: Armor.cpp  Building.cpp  Burger.cpp  CargoPaper.cpp  CraftingTable.cpp  Dessert.cpp  Diamond.cpp  DiamondOre.cpp  Drink.cpp  ElectricalTrain.cpp  Furnace.cpp  IronOre.cpp  LapisLazuliOre.cpp  MaglevTrain.cpp  Manager.cpp  Order.cpp  Pickaxe.cpp  RandomFood.cpp  Salad.cpp  SideDish.cpp  Soup.cpp  Storage.cpp  alcohol.cpp  deli.cpp  extern_sales.cpp  food_product.cpp  furniture.cpp  person.cpp  product_3c.cpp  project_manager.cpp  staff.cpp  vehicle.cpp
src/Device/: Device.cpp
src/Ore/: ObsidianOre.cpp  Ore.cpp
src/Pickaxe/: IronPickaxe.cpp  Pickaxe.cpp  StonePickaxe.cpp  WoodenPickaxe.cpp
subtree/: files.cmake
subtree/docs/: docs.cpp
subtree/src/: Ticket.cpp
test/: Armor_test.cpp  DiamondOre_test.cpp  Diamond_test.cpp  LapisLazuliOre_test.cpp  LapisLazuli_test.cpp  Tool.cpp  Tool.hpp  Validator.hpp  main.cpp  main2.cpp  ut_alcohol.cpp  ut_building.cpp  ut_cargo.cpp  ut_cargo_paper.cpp  ut_company.cpp  ut_coupon_related.cpp  ut_cylinder_engineer.cpp  ut_deli.cpp  ut_electrical.cpp  ut_food_product.cpp  ut_maglev.cpp  ut_normal_product.cpp  ut_product_3c.cpp  ut_project_assistant.cpp  ut_project_manager.cpp  ut_snack.cpp  ut_staff.cpp  ut_staff_sales.cpp  ut_storage_manager.cpp  ut_ticket.cpp  ut_vendor.cpp
test/Device/: ut_device.cpp  ut_light.cpp  ut_loudspeaker.cpp
test/Ore/: ut_coal_ore.cpp  ut_diamond_ore.cpp  ut_iron_ore.cpp  ut_obsidian_ore.cpp  ut_smeltable_ore.cpp
test/Pickaxe/: ut_gold_pickaxe.cpp  ut_iron_pickaxe.cpp  ut_wooden_pickaxe.cpp
test/PowerSwitch/: ut_normal_power_switch.cpp
